syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.zup;

service PixService {
  rpc registrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}

}

service RemoveChavePixService {
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixPixResponse) {}

}

enum TipoDeChave{
  UNKNOWN_TIPO_CHAVE  = 0;
  CPF                 = 1;
  CELULAR             = 2;
  EMAIL               = 3;
  ALEATORIA           = 4;
}

enum TipoDeConta{
  UNKNOWN_TIPO_CONTA  = 0;
  CONTA_CORRENTE      = 1;
  CONTA_POUPANCA      = 2;
}

message RegistraChavePixRequest {
  string clientId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clientId = 1;
  string pixId    = 2;
}

message RemoveChavePixRequest{
  string clientId = 1;
  string pixId    = 2;
}

message RemoveChavePixPixResponse{
  string clientId = 1;
  string pixId    = 2;
}